# aai-bench-marl

./: .gitignore  README.md  cleanup.sh  colab_versions.txt  connect.sh  dep.py  download_results.sh  mappo_balance.sh  mappo_balance_fast.sh  mappo_simple_tag.sh  masac_balance.sh  masac_simple_tag.sh  my_config.yaml  pyproject.toml  qmix_balance.sh  qmix_balance_default.sh  qmix_give-way_finetuned.sh  qmix_simple_tag_default.sh  resume_experiment.sh  run_benchmark.py  run_my_experiment.py  setup.sh  simple_tag_fast.sh  start_experiment.sh  vdn_balance.sh  viz.py  viz_train.py  viz_within_run_variance.py
