[project]
name = "aai-bench-marl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-meltingpot>=2.4.0",
    "matplotlib>=3.10.1",
    "moviepy>=2.1.2",
    "pettingzoo[simple-tag]>=1.25.0",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.0",
    "seaborn>=0.13.2",
    "vmas>=1.5.0",
    "wandb>=0.19.9",
]
